--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
 </head>
 <body>
     <div class="main">
-        <nav>I am nav</nav>
+        <nav>
+            <span><img width="53"src="images/logo.svg" alt=""></span>
+            <div>
+                <button>English</button>
+                <button>Sign In</button>
+            </div>
+        </nav>
       <div class="box"> 
-
+        
       </div>
+      <div class="hero">
+        <span>The biggest Indian hits. The best Indian stories.</span>
+        <span> All streaming here.</span>
+        <span> Watch anywhere. Cancel anytime.</span>
+        <span>Ready to watch? Enter your email to create or restart your membership.</span>
+        </div>
+      
     </div>
 
 </body>
