--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <span> All streaming here.</span>
         <span> Watch anywhere. Cancel anytime.</span>
         <span>Ready to watch? Enter your email to create or restart your membership.</span>
+         <div>
+            <input type="text" placeholder="Email Address">
+            <button>Get Started</button>
+         </div>
         </div>
       
     </div>
