made small changes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     </div>
     <section class="first">
-        <div>
+        <div class="text1">
             <span>Enjoy on your TV</span>
             <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
             
@@ -63,7 +63,7 @@
     </section>
     <div class="seperation three"></div>
     <section class="third">
-        <div>
+        <div class="text2">
             <span>Watch everywhere</span>
             <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
             
